# uv-assignment

./: .gitignore  README.md
packaged-app/: README.md  pyproject.toml
packaged-app/src/packaged_app/: __init__.py  main.py
simple-app/: README.md  main.py  pyproject.toml
