[project]
name = "packaged-app"
version = "0.1.0"
description = "A task manager application built with uv using src layout"
readme = "README.md"
authors = [
    { name = "muneeb-mombaai", email = "muneeb@momba.ai" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
packaged-app = "packaged_app.main:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
